--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -145,7 +145,8 @@ jobs:
       # PHAT WCP + DXVK + VKD3D INTEGRATION (Debug Mode)
       # ============================================================
       - name: Create PHAT WCP
-        run: |          set -e
+        run: | 
+          set -e
           cd build
           
           # Проверяем, что make был успешно выполнен (т.е. Makefile есть и make завершился)
