--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -1,4 +1,4 @@
-name: Wine 11.1 Staging PHAT + DXVK + VKD3D ARM64EC (Final - Check Build Dir)
+name: Wine 11.1 Staging PHAT + DXVK + VKD3D ARM64EC (Final - All Deps Fixed)
 
 on:
   workflow_dispatch:
@@ -169,7 +169,7 @@ jobs:
               fi
 
       # ============================================================
-      # PHAT WCP + DXVK + VKD3D INTEGRATION (CHECK FOR BUILD DIR)
+      # PHAT WCP + DXVK + VKD3D INTEGRATION (CHECK FOR BUILD/INSTALL DIR)
       # ============================================================
       - name: Create PHAT WCP
         run: |
