--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -1,4 +1,4 @@
-name: Wine 11.1 Staging PHAT + DXVK + VKD3D ARM64EC (Fixed Path Correct)
+name: Wine 11.1 Staging PHAT + DXVK + VKD3D ARM64EC (Final Fixed Paths)
 
 on:
   workflow_dispatch:
